# pnku-website

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.runtime  Dockerfile.youth  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: check-backend-with-mypy.yml  check-backend.yml  check-commit-message.yml  check-frontend.yml
backend/: .gitignore  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_all.py  run_reducer_admin.py  run_reducer_bare.py  run_syncer.py  run_worker_api.py  run_worker_bare.py
backend/scripts/: gen_nginx_config.py
backend/src/: custom.example.py  secret.example.py
backend/src/adhoc/: __init__.py  constants.py  game_start_reply.py  hint.py  puzzle.py  storys.py
backend/src/adhoc/areas/: __init__.py  area_list.py  common.py  data.py  simple_area_detail.py
backend/src/adhoc/boards/: __init__.py  base.py  config.py  first_blood_board.py  score_board.py  simple_score_board.py  speed_run_board.py
backend/src/adhoc/constants/: __init__.py  enums.py  messages.py  misc.py
backend/src/adhoc/constants/api/: response.py
backend/src/adhoc/fsm/: __init__.py  staff_team_game_state.py  team_game_state.py  team_puzzle_status.py
backend/src/adhoc/fsm/special_puzzles/: __init__.py  day2_01.py  day2_02.py  day2_03.py  day2_06.py  day2_meta.py  day3_20.py  day3_normal.py  day3_premeta.py
backend/src/adhoc/state/: __init__.py  staff_team_game_state.py  team_game_state.py  team_puzzle_state.py
backend/src/adhoc/state/currency/: __init__.py  attention_state.py  base.py  currency_event.py  currency_state.py  hint_point_state.py  utils.py
backend/src/adhoc/state/special_puzzles/: __init__.py  day2_01.py  day2_02.py  day2_03.py  day2_06.py  day2_meta.py  day3_20.py  day3_normal.py  day3_premeta.py
backend/src/admin/: app.py  fields.py  utils.py
backend/src/admin/templates/: base.html  debug.html  import_puzzle.html  list_puzzle.html  status.html
backend/src/admin/views/: __init__.py  announcement_view.py  base_view.py  debug_view.py  files_view.py  game_policy_view.py  hint_view.py  log_user_view.py  log_view.py  message_view.py  puzzle_state_view.py  puzzle_view.py  status_view.py  submission_view.py  team_event_view.py  team_view.py  template_view.py  ticket_message_view.py  ticket_view.py  trigger_view.py  user_view.py
backend/src/api/: __init__.py  app.py  auth.py  utils.py
backend/src/api/endpoint/: archive.py  auth.py  media.py  sybil.py  template.py  ws.py
backend/src/api/endpoint/wish/: __init__.py  game.py  message.py  puzzle.py  staff.py  team.py  ticket.py  upload.py  user.py  wish.py
backend/src/api/endpoint/wish/special/: __init__.py  common.py  day2_02.py  day2_05.py
backend/src/logic/: __init__.py  base.py  checker.py  glitter.py  pusher.py  reducer.py  utils.py  worker.py
backend/src/state/: __init__.py  announcement_state.py  base.py  board_state.py  game_policy_state.py  game_state.py  hint_state.py  message_state.py  puzzle_state.py  submission_state.py  team_event_state.py  team_state.py  ticket_state.py  trigger_state.py  user_state.py
backend/src/store/: __init__.py  announcement_store.py  game_policy_store.py  hint_store.py  log_store.py  log_user_store.py  message_store.py  puzzle_state_store.py  puzzle_store.py  submission_store.py  team_event_store.py  team_store.py  ticket_message_store.py  ticket_store.py  trigger_store.py  user_store.py
backend/src/sync/: app.py  sync.py
backend/src/sync/core/: leveldb_store.py  room_manager.py  sync_integration.py  websocket_handler.py
backend/src/sync/endpoint/: puzzle.py
backend/src/utils/: __init__.py  action_rep_tools.py  captcha.py  email.py  enum.py  hash_tools.py  http_tools.py  jwt_tools.py  logging.py  media.py  pycrdt_utils.py  pydantic_utils.py  recaptcha.py  simple_frequency_limit.py  string_tools.py  system.py  template.py  utils.py
backend/stubs/plyvel/: __init__.pyi
backend/stubs/sanic_ext/: __init__.pyi
database/: hint.sql  init_db.sql  init_dev_data.sql  puzzle.sql  structure.sql
docker-assets/: debian.sources  entrypoint.sh  logrotate.conf  nginx.conf
docs/: deployment.md  development.md
examples/: reducer.example.service  worker.example.service
frontend/: .env  .eslintrc  .gitignore  .prettierignore  .prettierrc  README.md  components.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.app.json  vite-plugin-remote-component.ts  vite.config.remote.ts  vite.config.ts
frontend/src/: App.tsx  Router.tsx  SvgIcons.tsx  constants.tsx  empty.ts  errors.ts  global.d.ts  globals.css  globals.scss  index.tsx  setup.example.ts  themes.css  utils.ts  vite-env.d.ts
frontend/src/app/: AppErrorBoundary.tsx  NotFound.module.css  NotFound.tsx  RouterErrorBoundary.tsx
frontend/src/archive/: archiveWish.js  day201.js  day202.js  day203.js  day205.js  day206.js  day320.js  gameStartApi.js
frontend/src/components/: Cap.tsx  ChatBox.tsx  CollapseCard.module.scss  CollapseCard.tsx  DynamicIcons.tsx  FancierCard.module.css  FancierCard.module.scss  FancierCard.tsx  FancyCard.tsx  FancySlimContainer.module.css  FancySlimContainer.module.scss  FancySlimContainer.tsx  Footer.tsx  FooterContent.tsx  GeneralError.tsx  GeneralTag.tsx  ImageWithSkeleton.tsx  InfoBox.module.scss  InfoBox.tsx  InputWithLabel.tsx  LinkTitle.module.scss  LinkTitle.tsx  NamedIcon.tsx  ProfileAvatar.tsx  Reloader.tsx  SyncTextArea.module.css  SyncTextarea.tsx  TabsNavbar.module.scss  TabsNavbar.tsx  TeamStatusTag.tsx  Template.css  Template.module.css  Template.module.scss  Template.tsx  TimestampAgo.tsx  WishComfirmModal.module.scss  WishConfirmModal.tsx  WishError.tsx
frontend/src/hooks/: useCooldown.ts  useCurrency.ts  (+5 more)
pages/: 404.html  503.html  reg.html
(+234 files in other folders)
