[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kinami"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
bleach = "^6.1"
bleach-allowlist = "^1.0"
Flask = "^2.3"
Flask-Admin = "^1.6"
Flask-SQLAlchemy = "^3.1"
sanic = { version = "^24.6.0", extras = ["ext"] }
pydantic = "^2.9.2"
markdown = "^3.7"
aiosmtplib = "^3.0"
pymysql = "^1.1.1"
pyjwt = "^2.9.0"
pyzmq = "^26.2.0"
httpx = { version = "^0.27.0", extras = ["http2"] }
psutil = "^6.0.0"
pytz = "^2024.2"
email-validator = "^2.2.0"
gevent = "^24.2.1"
wtforms = "~3.1"  # 3.2.x breaks Flask-Admin

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.7.3"
types-aiofiles = "^24.1.0.20240626"
types-bleach = "^6.1.0.20240331"
types-cryptography = "^3.3.23.2"
types-markdown = "^3.6.0.20240316"
types-psutil = "^6.0.0.20240621"
types-pyopenssl = "^24.1.0.20240722"
types-pytz = "^2024.1.0.20240417"
types-wtforms = "^3.1.0.20240425"

[tool.mypy]
plugins = ["pydantic.mypy"]
files = ["src/**/*.py", "*.py"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
strict = true
implicit_reexport = true
show_error_codes = true
warn_redundant_casts = true
disallow_any_generics = true
check_untyped_defs = true
warn_unused_ignores = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["src.api.*", "src.store.*", "src.admin.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["flask_admin.*", "bleach_allowlist.*", "email_validator.*", "gevent.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 120


[tool.ruff.lint]
select = [
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "F", # pyflakes
    "I", # isort
]
ignore = ["E501", "E402", "F401", "F403", "F405", "E731"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
