[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "kinami" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bleach>=6.1,<7.0",
    "bleach-allowlist>=1.0,<2.0",
    "Flask>=3.1,<4.0",
    "Flask-Admin==2.0.0a4",  # 1.6.1 is too old ...
    "Flask-SQLAlchemy>=3.1,<4.0",
    "sanic[ext]>=25.3.0,<26.0",
    "pydantic>=2.9.2,<3.0",
    "markdown>=3.7,<4.0",
    "aiosmtplib>=4.0,<5.0",
    "pymysql>=1.1,<2.0",
    "pyjwt>=2.3.0,<3.0",
    "pyzmq>=27.0.0,<28.0",
    "httpx[http2]>=0.28.0,<1.0",
    "psutil>=7.0,<8.0",
    "pytz>=2025.2",
    "email-validator>=2.2.0,<3.0",
    "gevent>=25.5.0,<26.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18,<2.0",
    "ruff>=0.13,<1.0",
    "types-aiofiles>=24.1,<25.0",
    "types-bleach>=6.1,<7.0",
    "types-cryptography>=3.3,<4.0",
    "types-markdown>=3.6,<4.0",
    "types-psutil>=7.0,<8.0",
    "types-pyopenssl>=24.1,<25.0",
    "types-pytz>=2025.2,<2026.0",
    "types-wtforms>=3.1,<4.0",
]


[tool.mypy]
plugins = ["pydantic.mypy"]
files = ["src/**/*.py", "*.py"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
strict = true
implicit_reexport = true
show_error_codes = true
warn_redundant_casts = true
disallow_any_generics = true
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["src.utils.system"]
warn_unused_ignores = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["src.api.*", "src.store.*", "src.admin.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "flask_admin.*",
    "bleach_allowlist.*",
    "email_validator.*",
    "gevent.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
]
ignore = [
    "E501", # Line too long
    "E402", # Module level import not at top of file
    "F401", # `xxx` imported but unused; consider removing, adding to `__all__`, or using a redundant alias
    "F403", # from xxx import *` used; unable to detect undefined names
    "F405", # `xxx` may be undefined, or defined from star imports
]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["src"]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
